--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "ng2-currency-mask": "^13.0.3",
     "ngx-loading": "^15.0.0",
     "ngx-toastr": "^16.2.0",
+    "preline": "^2.5.1",
     "rxjs": "~7.5.0",
+    "site-pessoal": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -35,12 +37,15 @@
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "~4.8.2"
   }
 }
