--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,15 @@
                   "maximumError": "10kb"
                 }
               ]
-            }
+            },
+            "development": {
+            "buildOptimizer": false,
+            "optimization": false,
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "sourceMap": true,
+            "namedChunks": true
+          }
           }
         },
         "serve": {
